<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016, Sergey Penkovsky <sergey.penkovsky@gmail.com>
  ~
  ~ This file is part of TraccarLitvakM (fork Erlymon Monitor).
  ~
  ~ TraccarLitvakM (fork Erlymon Monitor) is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ TraccarLitvakM (fork Erlymon Monitor) is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with TraccarLitvakM (fork Erlymon Monitor).  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/mapTitle" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/settingsDevices" />
    </group>

    <item android:title="@string/settingsTitle">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account"
                android:title="@string/settingsAccount" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/aboutTitle" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit"
                android:title="@string/logoutSubmit" />
        </menu>
    </item>
</menu>
