<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Sergey Penkovsky <sergey.penkovsky@gmail.com>
  ~
  ~ This file is part of TraccarLitvakM (fork Erlymon Monitor).
  ~
  ~ TraccarLitvakM (fork Erlymon Monitor) is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ TraccarLitvakM (fork Erlymon Monitor) is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with TraccarLitvakM (fork Erlymon Monitor).  If not, see <http://www.gnu.org/licenses/>.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.AboutActivity"
    tools:showIn="@layout/activity_about">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/about_margin"
        android:layout_marginStart="@dimen/about_margin"
        android:layout_marginTop="@dimen/about_margin"
        android:src="@drawable/logo"
        android:contentDescription="@string/appLogo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/about_margin"
        android:layout_toRightOf="@+id/logo"
        android:layout_toEndOf="@+id/logo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/appName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/aboutDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/aboutLicense" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/aboutWeb"
            android:autoLink="web" />

    </LinearLayout>
</RelativeLayout>
